# exercises

advent_of_code_2018/one/: one.cabal
advent_of_code_2018/one/src/: Main.hs
advent_of_code_2018/two/: two.cabal
advent_of_code_2018/two/one/: one.cabal
advent_of_code_2018/two/src/: Main.hs
c++/add-two-numbers/: main.cpp
c++/convert-sorted-array-to-binary-search-tree/: main.cpp
c++/maximum-depth-of-binary-tree/: main.cpp
c++/symmetric-tree/: main.cpp
codility/6-sorting/distinct/: main.cpp
codility/7-stacks_and_queues/brackets/: main.cpp
ctci/chapter_1/: exercise_1.2.c  exercise_1.3.cpp  exercises.cpp
ctci/chapter_2/: exercise_2.1.c  exercise_2.2.c  exercise_2.3.c  exercise_2.4.cpp
ctci/chapter_4/: exercise_4.1.hs  exercise_4.5.cpp
ctci/chapter_5/: exercise_5.1.cpp
geeksforgeeks/solve-the-sudoku/: main.py
hackerrank/bday-gift/: main.py
hackerrank/equal-stacks/: main.py
hackerrank/fair-rations/: main.py
hackerrank/flatland-space-stations/: main.cpp
hackerrank/halloween-sale/: main.py
hackerrank/happy-ladybugs/: main.py
hackerrank/lisa-workbook/: main.cpp
hackerrank/minimum-distances/: main.py
hackerrank/string-compression/: .gitignore  ChangeLog.md  package.yaml
hackerrank/tree-height-of-a-binary-tree/: main.py
haskell/area-of-a-polygon/: Main.hs  area-of-a-polygon.cabal
haskell/area-under-curves/: Main.hs  area-under-curve.cabal
haskell/between-two-sets/: Main.hs
haskell/radix/: radix.cabal
haskell/radix/app/: Main.hs
haskell/radix/src/: Radix.hs
haskell/radix/test/: Spec.hs
haskell/save-the-prisoner/: Main.hs
(+9 files in other folders)
