name:                radix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/radix#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Radix
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable radix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , radix
                     , criterion
                     , random

test-suite radix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , radix
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , pcre-light
                     , generic-arbitrary
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
